--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -108,7 +108,7 @@
     left: 28%;
   }
   .profile__button-add {
-    margin-left: 0px;
+    margin-left: 0;
   }
 }
 @media screen and (max-width: 548px) {
